--- a/sass/home.sass
+++ b/sass/home.sass
@@ -5,9 +5,24 @@
 @import 'sections'
 
 
+body
+	position: relative
+	&:before
+		content: ""
+		background-image: url('../../assets/images/dotted-bg.png')
+		background-repeat: repeat
+		opacity: 0.5
+		position: absolute
+		top: 0
+		left: 0
+		right: 0
+		bottom: 0
+		z-index: -1
+
 header
 	padding: 4rem 0
 	background-color: $color-light-gray
+	background-color: rgba(0,0,0,0.05)
 
 	.header-content
 		display: flex
