--- a/sass/sections/cta.sass
+++ b/sass/sections/cta.sass
@@ -1,22 +1,33 @@
 section.cta
 	background-color: $color-dark-gray
-	padding: 6rem 0 
+	padding: 3rem 2rem
+	@include media-breakpoint-up(lg)
+		padding: 5rem 2rem
+	@include media-breakpoint-up(xl)
+		padding: 6rem 0
 
 	h2
 		color: $color-white
 		font-size: 2.8rem
-		font-weight: 600
+		font-weight: 400
 		line-height: 1.3
 		margin-bottom: 0
 		padding: 3rem 0
+		//text-shadow: 1px 1px 1px rgba(0,0,0,1)
+		.em
+			//background-color: $color-brand
+			//color: $color-white
+			//border-radius: 0.3rem
+
 		@include media-breakpoint-up(lg)
-			font-size: 3.2rem
+			font-size: 4rem
 			padding: 3rem 4rem 3rem 0
 
 	h3
 		font-weight: 300
 		color: $color-white
 		font-size: 2.4rem
+
 
 	.form-holder
 		padding-top: 4rem
