--- a/sass/sections/hero.sass
+++ b/sass/sections/hero.sass
@@ -2,18 +2,69 @@ section.hero
 	display: flex
 	justify-content: center
 	align-items: center
-	padding: 10rem 0
+	//padding: 6rem 0 0 0
 	min-height: 60rem
-	.message
-		width: 100%
-		max-width: 500px
+	overflow: hidden
+	position: relative
+	
+	@include media-breakpoint-up(lg)
+		//padding: 10rem 0 0 0
+	.section-content
+		display: flex
+		flex-direction: column		
+		position: relative
+		
+		@include media-breakpoint-up(lg)
+			flex-direction: row
+			height: 70rem
+			justify-content: space-between
+			align-items: center
+		.message
+			width: 100%
+			// max-width: 500px
+			width: 100%
+			padding: 3rem
 
-		h1
-			font-size: 8rem
-			font-weight: 800
-			color: $color-brand
-			margin-bottom: 1rem
-			line-height: 1.2
-		h2
-			font-size: 3rem
-			font-weight: 300
+
+			@include media-breakpoint-up(lg)
+				width: 40%
+
+			h1
+				font-size: 6rem
+				font-weight: 800
+				color: $color-brand
+				margin-bottom: 1rem
+				line-height: 1.2
+				@include media-breakpoint-up(md)
+					text-align: center
+					br
+						display: none
+
+				@include media-breakpoint-up(lg)
+					font-size: 8rem
+					text-align: left
+					br
+						display: block
+			h2
+				font-size: 2rem
+				font-weight: 300
+				line-height: 1.6
+				@include media-breakpoint-up(md)
+					text-align: center
+				@include media-breakpoint-up(lg)
+					text-align: left
+		.featured-image
+			width: 100%
+			height: 100%
+			position: relative
+			@include media-breakpoint-up(lg)
+				width: 60%
+			img
+				width: 100%
+				height: auto
+				@include media-breakpoint-up(lg)
+					width: 120%
+					position: absolute
+					top: -0rem
+					right: -20rem
+			
