--- a/sass/home.sass
+++ b/sass/home.sass
@@ -9,7 +9,7 @@ body
 	position: relative
 	&:before
 		content: ""
-		background-image: url('../../assets/images/dotted-bg.png')
+		background-image: url('../assets/images/dotted-bg.png')
 		background-repeat: repeat
 		opacity: 0.5
 		position: absolute
@@ -18,6 +18,7 @@ body
 		right: 0
 		bottom: 0
 		z-index: -1
+		
 
 header
 	padding: 4rem 0
