--- a/sass/home.sass
+++ b/sass/home.sass
@@ -18,7 +18,11 @@ body
 		right: 0
 		bottom: 0
 		z-index: -1
-		
+
+	::selection
+		background-color: $color-brand
+		color: $color-white
+
 
 header
 	padding: 4rem 0
