--- a/sass/sections/features.sass
+++ b/sass/sections/features.sass
@@ -44,6 +44,9 @@ section.features
 			&.brand
 				background-color: $color-brand
 				color: $color-white
+				::selection
+					background-color: $color-white
+					color: $color-brand
 			&.alt
 				background-color: $color-silver
 				color: $color-white
