--- a/sass/home.sass
+++ b/sass/home.sass
@@ -33,6 +33,8 @@ header
 		display: flex
 		flex-direction: row
 		justify-content: space-between
+		padding-left: 2rem
+		padding-right: 2rem
 
 
 		.brand
@@ -42,8 +44,14 @@ header
 			justify-content: center
 			align-items: center
 			text-decoration: none
+			margin-right: 1rem
 			.logo
 				margin-right: 1rem
+				display: flex
+				justify-content: center
+				align-items: center
+				align-content: center
+				width: 35px
 				img
 					width: 100%
 					max-width: 50px
@@ -51,25 +59,33 @@ header
 			h1
 				margin: 0
 				padding: 0
-				font-size: 3.6rem
+				font-size: 2.6rem
 				text-transform: uppercase
 				font-family: $font-brand
 				font-weight: 800
 
 	.nav
 		display: flex
-		justify-content: center
+		justify-content: flex-end
 		align-items: center
 		align-content: center
+		flex-wrap: wrap
+
 		.nav-item
-			margin-left: 4rem
+			margin-left: 2rem
 			font-size: 1.8rem
+			@include media-breakpoint-up(sm)
+				margin-left: 4rem
+			@include media-breakpoint-up(md)
+				margin-left: 6rem
 			&:first-of-type
 				margin-left: 0
+
 			a
 				color: $color-brand
 			&.btn
 				font-size: 1.6rem
+				padding: 0.1rem 0.5rem
 				a
 					color: #fff
 
