--- a/sass/sections/footer.sass
+++ b/sass/sections/footer.sass
@@ -5,15 +5,23 @@ section.footer
 		display: flex
 		flex-direction: row
 		justify-content: space-between
+		align-items: center
+		align-content: center
 		.brand
 			display: flex
 			flex-direction: row
 			align-content: center
-			justify-content: flex-start
+			justify-content: center
 			align-items: center
 			text-decoration: none
+			margin-right: 1rem
 			.logo
 				margin-right: 1rem
+				display: flex
+				justify-content: center
+				align-items: center
+				align-content: center
+				width: 35px
 				img
 					width: 100%
 					max-width: 50px
@@ -21,8 +29,11 @@ section.footer
 			h1
 				margin: 0
 				padding: 0
-				font-size: 3.6rem
+				font-size: 2.6rem
 				text-transform: uppercase
 				font-family: $font-brand
-				font-weight: 800
 				color: $color-white
+				font-weight: 800
+
+		p.copy
+			margin-bottom: 0
