--- a/docs/styles/extra.css
+++ b/docs/styles/extra.css
@@ -73,6 +73,12 @@
 	color: #ff6e42;
 }
 
+.md-typeset .md-button:hover {
+	background-color: #e04f23;
+	border-color: #e04f23;
+
+}
+
 h1 a:hover, h2 a:hover a, h3 a:hover {
 	border-bottom: none;
 /*	background-color: #ff6e42;*/
