--- a/docs/styles/extra.css
+++ b/docs/styles/extra.css
@@ -85,7 +85,7 @@ h1 a:hover, h2 a:hover a, h3 a:hover {
 /*	color: #fff;*/
 }
 
-
-
-
+.shadow {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
