--- a/sass/sections/hero.sass
+++ b/sass/sections/hero.sass
@@ -21,27 +21,35 @@ section.hero
 			align-items: center
 		.message
 			width: 100%
-			// max-width: 500px
 			width: 100%
 			padding: 3rem
+			z-index: 99
 
 
 			@include media-breakpoint-up(lg)
-				width: 40%
+				width: 100%
+				position: relative
+				top: -8rem
 
 			h1
-				font-size: 6rem
+				font-size: 3rem
 				font-weight: 800
-				color: $color-brand
+				color: $color-dark-gray
 				margin-bottom: 1rem
 				line-height: 1.2
+				text-align: center
+				margin-bottom: 2.5rem
+				span
+					color: $color-brand
+				@include media-breakpoint-up(sm)
+					font-size: 4rem
 				@include media-breakpoint-up(md)
-					text-align: center
+					font-size: 5rem
 					br
 						display: none
 
 				@include media-breakpoint-up(lg)
-					font-size: 8rem
+					font-size: 5.5rem
 					text-align: left
 					br
 						display: block
@@ -49,16 +57,23 @@ section.hero
 				font-size: 2rem
 				font-weight: 300
 				line-height: 1.6
+				text-align: center
+				strong
+					font-weight: 600
+
 				@include media-breakpoint-up(md)
 					text-align: center
 				@include media-breakpoint-up(lg)
 					text-align: left
+					max-width: 500px
 		.featured-image
 			width: 100%
 			height: 100%
-			position: relative
+			right: 0
+
 			@include media-breakpoint-up(lg)
 				width: 60%
+				position: absolute
 			img
 				width: 100%
 				height: auto
