--- a/docs/styles/home.css
+++ b/docs/styles/home.css
@@ -11975,6 +11975,12 @@ section.hero .section-content .message {
   width: 100%;
   padding: 3rem;
   z-index: 99;
+  text-align: center;
+}
+@media (min-width: 992px) {
+  section.hero .section-content .message {
+    text-align: left;
+  }
 }
 @media (min-width: 992px) {
   section.hero .section-content .message {
@@ -11989,7 +11995,6 @@ section.hero .section-content .message h1, section.hero .section-content .messag
   color: #3B3B3B;
   margin-bottom: 1rem;
   line-height: 1.2;
-  text-align: center;
   margin-bottom: 2.5rem;
 }
 section.hero .section-content .message h1 span, section.hero .section-content .message .h1 span {
@@ -12021,7 +12026,6 @@ section.hero .section-content .message h2, section.hero .section-content .messag
   font-size: 2rem;
   font-weight: 300;
   line-height: 1.6;
-  text-align: center;
 }
 section.hero .section-content .message h2 strong, section.hero .section-content .message .h2 strong {
   font-weight: 600;
