--- a/sass/sections/hero.sass
+++ b/sass/sections/hero.sass
@@ -24,6 +24,9 @@ section.hero
 			width: 100%
 			padding: 3rem
 			z-index: 99
+			text-align: center
+			@include media-breakpoint-up(lg)
+				text-align: left
 
 
 			@include media-breakpoint-up(lg)
@@ -37,7 +40,6 @@ section.hero
 				color: $color-dark-gray
 				margin-bottom: 1rem
 				line-height: 1.2
-				text-align: center
 				margin-bottom: 2.5rem
 				span
 					color: $color-brand
@@ -57,7 +59,6 @@ section.hero
 				font-size: 2rem
 				font-weight: 300
 				line-height: 1.6
-				text-align: center
 				strong
 					font-weight: 600
 
