added testimonials section

--- a/sass/config/variables.sass
+++ b/sass/config/variables.sass
@@ -3,6 +3,7 @@
 $font-brand: 'Montserrat', sans-serif
 $font-header: 'Rubik', sans-serif
 $font-body: 'Open Sans', sans-serif
+$font-serif: 'Lora', sans-serif
 
 //colors
 
