--- a/docs/styles/home.css
+++ b/docs/styles/home.css
@@ -12242,6 +12242,92 @@ section.features .feature .feature-description .description-holder p {
   }
 }
 
+section.testimonials {
+  padding: 8rem 0;
+  background-color: #f8f9fa;
+}
+section.testimonials .testimonial {
+  margin: 4rem;
+}
+section.testimonials .testimonial .testimonial-body {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+}
+@media (min-width: 768px) {
+  section.testimonials .testimonial .testimonial-body {
+    flex-direction: row;
+  }
+}
+section.testimonials .testimonial .testimonial-body i.quote-icon {
+  color: #ff6e42;
+  display: block;
+  position: absolute;
+  font-size: 16rem;
+  display: block;
+  top: -3rem;
+  line-height: 1;
+  position: absolute;
+  opacity: 0.2;
+  left: -5rem;
+  line-height: 1;
+}
+@media (min-width: 768px) {
+  section.testimonials .testimonial .testimonial-body i.quote-icon {
+    font-size: 10rem;
+    position: relative;
+    opacity: 1;
+    top: 0;
+    left: 0;
+  }
+}
+section.testimonials .testimonial .testimonial-body p.testimonial-text {
+  font-size: 2rem;
+  font-family: "Lora", sans-serif;
+  font-style: italic;
+  padding-left: 2rem;
+  padding-top: 4rem;
+  margin-bottom: 1rem;
+}
+@media (min-width: 768px) {
+  section.testimonials .testimonial .testimonial-body p.testimonial-text {
+    padding-top: 4rem;
+    font-size: 2.2rem;
+    padding-left: 0;
+  }
+}
+section.testimonials .testimonial .testimonial-meta {
+  display: flex;
+  justify-content: center;
+}
+@media (min-width: 768px) {
+  section.testimonials .testimonial .testimonial-meta {
+    justify-content: flex-end;
+  }
+}
+section.testimonials .testimonial .testimonial-meta .testimonial-meta-content {
+  max-width: 40rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+}
+section.testimonials .testimonial .testimonial-meta .testimonial-meta-content img {
+  width: 7rem;
+  height: 7rem;
+  border-radius: 100%;
+  box-shadow: 0 0 30px -20px rgba(0, 0, 0, 0.4);
+  margin-right: 1rem;
+}
+section.testimonials .testimonial .testimonial-meta .testimonial-meta-content h4, section.testimonials .testimonial .testimonial-meta .testimonial-meta-content .h4 {
+  font-size: 1.8rem;
+  margin: 0;
+}
+section.testimonials .testimonial .testimonial-meta .testimonial-meta-content h5, section.testimonials .testimonial .testimonial-meta .testimonial-meta-content .h5 {
+  font-size: 1.6rem;
+  margin: 0;
+}
+
 section.footer {
   background-color: #222222;
   color: #fff;
@@ -12286,6 +12372,21 @@ section.footer .footer-holder .brand h1, section.footer .footer-holder .brand .h
 }
 section.footer .footer-holder p.copy {
   margin-bottom: 0;
+}
+
+section .section-header {
+  text-align: center;
+  text-transform: uppercase;
+}
+section .section-header h3, section .section-header .h3 {
+  font-size: 1.8rem;
+  margin-bottom: 0;
+  letter-spacing: 1px;
+  color: #ff6e42;
+}
+section .section-header h2, section .section-header .h2 {
+  font-size: 3.6rem;
+  text-transform: capitalize;
 }
 
 body {
