--- a/sass/sections/testimonials.sass
+++ b/sass/sections/testimonials.sass
@@ -63,3 +63,10 @@ section.testimonials
 				h5
 					font-size: 1.6rem
 					margin: 0
+					width: 300px
+
+		&:nth-child(even)
+			.testimonial-meta
+				@include media-breakpoint-up(md)
+					//justify-content: flex-start
+
