--- a/docs/styles/home.css
+++ b/docs/styles/home.css
@@ -11948,12 +11948,15 @@ a {
 section {
   padding: 4rem 0;
 }
+section .section-header {
+  text-align: center;
+  padding-bottom: 2rem;
+}
 
 section.hero {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 60rem;
   overflow: hidden;
   position: relative;
 }
@@ -12041,6 +12044,14 @@ section.hero .section-content .message h2 strong, section.hero .section-content 
     max-width: 500px;
   }
 }
+section.hero .section-content .message h3, section.hero .section-content .message .h3 {
+  color: #ff6e42;
+  text-transform: uppercase;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+  font-size: 2.6rem;
+}
 section.hero .section-content .featured-image {
   width: 100%;
   height: 100%;
@@ -12063,6 +12074,177 @@ section.hero .section-content .featured-image img {
     top: 0rem;
     right: -20rem;
   }
+}
+
+section.hero.cloud-hero {
+  overflow: visible;
+}
+section.hero.cloud-hero .section-content {
+  height: auto;
+  min-height: 50rem;
+}
+@media (min-width: 768px) {
+  section.hero.cloud-hero .section-content {
+    align-items: flex-start;
+  }
+}
+section.hero.cloud-hero .section-content .message {
+  width: 100%;
+  width: 100%;
+  top: 0;
+}
+section.hero.cloud-hero .section-content .message h1, section.hero.cloud-hero .section-content .message .h1 {
+  font-size: 3rem;
+  font-weight: 800;
+  color: #3B3B3B;
+  margin-bottom: 1rem;
+  line-height: 1.2;
+  margin-bottom: 2.5rem;
+}
+section.hero.cloud-hero .section-content .message h1 span, section.hero.cloud-hero .section-content .message .h1 span {
+  color: #ff6e42;
+}
+@media (min-width: 576px) {
+  section.hero.cloud-hero .section-content .message h1, section.hero.cloud-hero .section-content .message .h1 {
+    font-size: 4rem;
+  }
+}
+@media (min-width: 768px) {
+  section.hero.cloud-hero .section-content .message h1, section.hero.cloud-hero .section-content .message .h1 {
+    font-size: 5rem;
+  }
+  section.hero.cloud-hero .section-content .message h1 br, section.hero.cloud-hero .section-content .message .h1 br {
+    display: none;
+  }
+}
+@media (min-width: 992px) {
+  section.hero.cloud-hero .section-content .message h1, section.hero.cloud-hero .section-content .message .h1 {
+    font-size: 4.5rem;
+    text-align: left;
+  }
+  section.hero.cloud-hero .section-content .message h1 br, section.hero.cloud-hero .section-content .message .h1 br {
+    display: block;
+  }
+}
+section.hero.cloud-hero .section-content .message h2, section.hero.cloud-hero .section-content .message .h2 {
+  font-size: 2rem;
+  font-weight: 300;
+  line-height: 1.6;
+}
+section.hero.cloud-hero .section-content .message h2 strong, section.hero.cloud-hero .section-content .message .h2 strong {
+  font-weight: 600;
+}
+@media (min-width: 768px) {
+  section.hero.cloud-hero .section-content .message h2, section.hero.cloud-hero .section-content .message .h2 {
+    text-align: center;
+  }
+}
+@media (min-width: 992px) {
+  section.hero.cloud-hero .section-content .message h2, section.hero.cloud-hero .section-content .message .h2 {
+    text-align: left;
+    max-width: 500px;
+  }
+}
+section.hero.cloud-hero .section-content .message h3, section.hero.cloud-hero .section-content .message .h3 {
+  color: #ff6e42;
+  text-transform: uppercase;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+  font-size: 2.6rem;
+}
+section.hero.cloud-hero .featured-image {
+  width: 100%;
+  height: 100%;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 0;
+  padding-right: 0;
+}
+@media (min-width: 576px) {
+  section.hero.cloud-hero .featured-image {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+}
+@media (min-width: 768px) {
+  section.hero.cloud-hero .featured-image {
+    padding-left: 20%;
+    padding-right: 20%;
+  }
+}
+@media (min-width: 992px) {
+  section.hero.cloud-hero .featured-image {
+    width: 60%;
+  }
+}
+section.hero.cloud-hero .featured-image img {
+  width: 100%;
+  height: auto;
+}
+@media (min-width: 992px) {
+  section.hero.cloud-hero .featured-image img {
+    width: 80%;
+    position: absolute;
+    top: 13rem;
+    right: 0rem;
+  }
+}
+@media (min-width: 1200px) {
+  section.hero.cloud-hero .featured-image img {
+    top: 10rem;
+  }
+}
+@media (min-width: 1400px) {
+  section.hero.cloud-hero .featured-image img {
+    top: 4rem;
+  }
+}
+
+section.concept-highlights {
+  text-align: center;
+}
+section.concept-highlights .section-header {
+  padding-bottom: 8rem;
+}
+section.concept-highlights .section-header h2, section.concept-highlights .section-header .h2 {
+  font-size: 4rem;
+  font-weight: 800;
+  position: relative;
+}
+section.concept-highlights .section-header h2::after, section.concept-highlights .section-header .h2::after {
+  content: "";
+  height: 0.8rem;
+  width: 50%;
+  max-width: 100px;
+  background-color: #ff6e42;
+  bottom: -2rem;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 1rem;
+}
+section.concept-highlights .col {
+  margin-bottom: 2rem;
+}
+@media (min-width: 768px) {
+  section.concept-highlights .col {
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 992px) {
+  section.concept-highlights .col {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+section.concept-highlights h2, section.concept-highlights .h2 {
+  font-size: 2.4rem;
+}
+section.concept-highlights h2 span, section.concept-highlights .h2 span {
+  color: #ff6e42;
 }
 
 section.cta {
@@ -12242,6 +12424,10 @@ section.features .feature .feature-description .description-holder p {
   }
 }
 
+section.features.cloud-features {
+  padding: 4rem 0;
+}
+
 section.testimonials {
   padding: 8rem 0;
   background-color: #f8f9fa;
@@ -12391,6 +12577,7 @@ section .section-header h2, section .section-header .h2 {
 
 body {
   position: relative;
+  min-height: 100vh;
 }
 body:before {
   content: "";
@@ -12434,7 +12621,7 @@ header .header-content {
   padding-left: 2rem;
   padding-right: 2rem;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   header .header-content {
     flex-direction: row;
     justify-content: space-between;
@@ -12450,7 +12637,7 @@ header .header-content .brand {
   margin-right: 1rem;
   margin-bottom: 3rem;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   header .header-content .brand {
     margin-bottom: 0;
   }
@@ -12487,7 +12674,7 @@ header .nav {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   header .nav {
     justify-content: flex-end;
   }
