--- a/sass/home.sass
+++ b/sass/home.sass
@@ -7,6 +7,7 @@
 
 body
 	position: relative
+	min-height: 100vh
 	&:before
 		content: ""
 		background-image: url('../assets/images/dotted-bg.png')
@@ -48,7 +49,7 @@ header
 		padding-right: 2rem
 
 
-		@include media-breakpoint-up(md)
+		@include media-breakpoint-up(lg)
 			flex-direction: row
 			justify-content: space-between
 		
@@ -63,7 +64,7 @@ header
 			text-decoration: none
 			margin-right: 1rem
 			margin-bottom: 3rem
-			@include media-breakpoint-up(md)
+			@include media-breakpoint-up(lg)
 				margin-bottom: 0
 			.logo
 				margin-right: 1rem
@@ -94,7 +95,7 @@ header
 		font-weight: 600
 		text-transform: uppercase
 		letter-spacing: 1px
-		@include media-breakpoint-up(md)
+		@include media-breakpoint-up(lg)
 			justify-content: flex-end
 
 		.nav-item
