--- a/sass/sections/hero.sass
+++ b/sass/sections/hero.sass
@@ -3,7 +3,7 @@ section.hero
 	justify-content: center
 	align-items: center
 	//padding: 6rem 0 0 0
-	min-height: 60rem
+	//min-height: 60rem
 	overflow: hidden
 	position: relative
 	
@@ -67,6 +67,13 @@ section.hero
 				@include media-breakpoint-up(lg)
 					text-align: left
 					max-width: 500px
+			h3
+				color: $color-brand
+				text-transform: uppercase
+				text-transform: uppercase
+				font-family: $font-brand
+				font-weight: 800
+				font-size: 2.6rem
 		.featured-image
 			width: 100%
 			height: 100%
@@ -83,4 +90,89 @@ section.hero
 					position: absolute
 					top: -0rem
 					right: -20rem
+
+
+section.hero.cloud-hero
+	overflow: visible
+	.section-content
+		height: auto
+		min-height: 50rem
+		@include media-breakpoint-up(md)
+			align-items: flex-start
+		.message
+			width: 100%
+			width: 100%	
+			top: 0
+
+			h1
+				font-size: 3rem
+				font-weight: 800
+				color: $color-dark-gray
+				margin-bottom: 1rem
+				line-height: 1.2
+				margin-bottom: 2.5rem
+				span
+					color: $color-brand
+				@include media-breakpoint-up(sm)
+					font-size: 4rem
+				@include media-breakpoint-up(md)
+					font-size: 5rem
+					br
+						display: none
+
+				@include media-breakpoint-up(lg)
+					font-size: 4.5rem
+					text-align: left
+					br
+						display: block
+			h2
+				font-size: 2rem
+				font-weight: 300
+				line-height: 1.6
+				strong
+					font-weight: 600
+
+				@include media-breakpoint-up(md)
+					text-align: center
+				@include media-breakpoint-up(lg)
+					text-align: left
+					max-width: 500px
+			h3
+				color: $color-brand
+				text-transform: uppercase
+				text-transform: uppercase
+				font-family: $font-brand
+				font-weight: 800
+				font-size: 2.6rem
+	.featured-image
+		width: 100%
+		height: 100%
+		right: 0
+		display: flex
+		justify-content: center
+		align-items: center
+		padding-left: 0
+		padding-right: 0
+		@include media-breakpoint-up(sm)
+			padding-left: 10%
+			padding-right: 10%
+		@include media-breakpoint-up(md)
+			padding-left: 20%
+			padding-right: 20%
+		@include media-breakpoint-up(lg)
+			width: 60%
+		img
+			width: 100%
+			height: auto
+			@include media-breakpoint-up(lg)
+				width: 80%
+				position: absolute
+				top: 13rem
+				right: 0rem
+			@include media-breakpoint-up(xl)
+				top: 10rem
+			@include media-breakpoint-up(xxl)
+				top: 4rem
+
+				
 			
