--- a/sass/config/variables.sass
+++ b/sass/config/variables.sass
@@ -7,6 +7,8 @@ $font-serif: 'Lora', sans-serif
 
 //colors
 
+$color-cal: #1f1f1f
+
 $color-light-gray: #fafbfc
 $color-light-gray: #f3f3f3
 $color-brand: #ff6e42
