--- a/sass/sections/footer.sass
+++ b/sass/sections/footer.sass
@@ -1,5 +1,6 @@
 section.footer
 	background-color: darken($color-dark-gray, 10%)
+	background-color: $color-brand
 	color: $color-white
 	.footer-holder
 		display: flex
