--- a/sass/sections/features.sass
+++ b/sass/sections/features.sass
@@ -71,6 +71,7 @@ section.features
 						font-size: 3rem
 					@include media-breakpoint-up(xl)
 						font-size: 4rem
+						font-weight: 800
 				p
 					font-size: 1.8rem
 					@include media-breakpoint-up(xl)
