--- a/sass/common/buttons.sass
+++ b/sass/common/buttons.sass
@@ -1,30 +1,40 @@
 .btn
 	font-size: 1.6rem
 	border-radius: 0.5rem
+	padding: 0.5rem 2rem
+	font-weight: bold
+	transition: none
+	text-transform: uppercase
+	border-left: none
+	border-right: none
+	font-family: $font-header
+	font-weight: 600
 	@include media-breakpoint-up(lg)
 		font-size: 2rem
 	&.btn-primary
 		background-color: $color-brand
 		border-color: $color-brand
-		color: #fff
-		padding: 0.5rem 2rem
-		font-weight: bold
-		border-bottom: solid darken($color-brand, 50%) 4px
-		transition: none
-		text-transform: uppercase
-		border-left: none
-		border-right: none
-		font-family: $font-header
-		font-weight: 600
-		a
-			color: #fff
+		border-bottom: solid darken($color-brand, 30%) 4px
 		&:hover, &:focus, &:active
 			background-color: $color-brand !important
 			border-color: $color-brand !important
-			border-bottom: none
-			position: relative
-			bottom: -3px
-			margin-bottom: 4px
+	&.btn-secondary
+		background-color: $color-dark-gray
+		border-color: $color-dark-gray
+		border-bottom: solid darken($color-dark-gray, 50%) 4px
+		color: #fff
+		&:hover, &:focus, &:active
+			background-color: $color-dark-gray !important
+			border-color: $color-dark-gray !important
+
+		
+	a
+		color: #fff
+	&:hover, &:focus, &:active
+		border-bottom: 0px
+		position: relative
+		bottom: -4px
+		margin-bottom: 4px
 	// &.btn-primary-alt
 	// 	background-color: darken($color-brand-highlight, 10%)
 	// 	border-color: darken($color-brand-highlight, 30%)
