--- a/docs/styles/home.css
+++ b/docs/styles/home.css
@@ -12306,18 +12306,33 @@ section.testimonials .testimonial .testimonial-meta {
   }
 }
 section.testimonials .testimonial .testimonial-meta .testimonial-meta-content {
-  max-width: 40rem;
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-end;
   align-content: center;
+  text-align: right;
+}
+@media (min-width: 768px) {
+  section.testimonials .testimonial .testimonial-meta .testimonial-meta-content {
+    flex-direction: row-reverse;
+    align-items: center;
+    align-content: center;
+    text-align: right;
+  }
 }
 section.testimonials .testimonial .testimonial-meta .testimonial-meta-content img {
   width: 7rem;
   height: 7rem;
   border-radius: 100%;
   box-shadow: 0 0 30px -20px rgba(0, 0, 0, 0.4);
-  margin-right: 1rem;
+  margin-bottom: 1rem;
+}
+@media (min-width: 768px) {
+  section.testimonials .testimonial .testimonial-meta .testimonial-meta-content img {
+    margin-bottom: 0;
+    margin-left: 2rem;
+  }
 }
 section.testimonials .testimonial .testimonial-meta .testimonial-meta-content h4, section.testimonials .testimonial .testimonial-meta .testimonial-meta-content .h4 {
   font-size: 1.8rem;
