--- a/sass/sections/testimonials.sass
+++ b/sass/sections/testimonials.sass
@@ -45,17 +45,28 @@ section.testimonials
 			@include media-breakpoint-up(md)
 				justify-content: flex-end
 			.testimonial-meta-content
-				max-width: 40rem
+				width: 100%
 				display: flex
-				flex-direction: row
-				align-items: center
+				flex-direction: column
+				align-items: flex-end
 				align-content: center
+				text-align: right
+				@include media-breakpoint-up(md)
+					//max-width: 40rem
+					flex-direction: row-reverse
+					align-items: center
+					align-content: center
+					text-align: right
 				img
 					width: 7rem
 					height: 7rem
 					border-radius: 100%
 					box-shadow: 0 0 30px -20px rgba(0,0,0,0.4)
-					margin-right: 1rem
+					margin-bottom: 1rem
+					@include media-breakpoint-up(md)
+						margin-bottom: 0
+						margin-left: 2rem
+
 
 				h4
 					font-size: 1.8rem
