added pages for fireside chat

--- a/sass/config/variables.sass
+++ b/sass/config/variables.sass
@@ -21,3 +21,8 @@ $color-off-white: #eeecec
 $color-off-white: #fff8f0
 $color-blue: #4169e1
 $color-silver: #797aaa
+
+
+
+.color-brand
+	color: $color-brand
