--- a/sass/sections/forms.sass
+++ b/sass/sections/forms.sass
@@ -59,3 +59,27 @@
 			div.response
 				width: 100%
 
+
+
+.fireside-chat-signup
+	clear: left
+	font-size: 1.4rem
+
+	#mc_embed_shell
+		width: 100%
+		max-width: 650px
+		padding: 1rem
+		background-color: lighten($color-brand, 30%)
+		border-radius: 1rem
+		margin: 0 auto
+
+		.helper_text	
+			background-color: transparent
+
+		.button
+			background-color: $color-brand
+			padding: 0.5rem 1rem
+			height: auto
+			text-transform: uppercase
+			&:hover
+				background-color: darken($color-brand, 10%)
