--- a/sass/sections/sections.sass
+++ b/sass/sections/sections.sass
@@ -4,3 +4,12 @@ section
 	.section-header
 		text-align: center
 		padding-bottom: 2rem
+		
+		h3
+			font-size: 1.8rem
+			margin-bottom: 0
+			letter-spacing: 1px
+			color: $color-brand
+		h2
+			font-size: 3.6rem
+			text-transform: uppercase
