--- a/docs/styles/home.css
+++ b/docs/styles/home.css
@@ -11855,6 +11855,10 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.color-brand {
+  color: #ff6e42;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -11910,6 +11914,25 @@ a {
   font-size: 1.8rem;
 }
 
+.responsive-video {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  background: #000;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+.responsive-video iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
 .btn {
   font-size: 1.6rem;
   border-radius: 0.5rem;
@@ -11962,6 +11985,16 @@ section {
 section .section-header {
   text-align: center;
   padding-bottom: 2rem;
+}
+section .section-header h3, section .section-header .h3 {
+  font-size: 1.8rem;
+  margin-bottom: 0;
+  letter-spacing: 1px;
+  color: #ff6e42;
+}
+section .section-header h2, section .section-header .h2 {
+  font-size: 3.6rem;
+  text-transform: uppercase;
 }
 
 section.hero {
@@ -12620,6 +12653,31 @@ section.testimonials .testimonial .testimonial-meta .testimonial-meta-content h5
   width: 100%;
 }
 
+.fireside-chat-signup {
+  clear: left;
+  font-size: 1.4rem;
+}
+.fireside-chat-signup #mc_embed_shell {
+  width: 100%;
+  max-width: 650px;
+  padding: 1rem;
+  background-color: #ffe3db;
+  border-radius: 1rem;
+  margin: 0 auto;
+}
+.fireside-chat-signup #mc_embed_shell .helper_text {
+  background-color: transparent;
+}
+.fireside-chat-signup #mc_embed_shell .button {
+  background-color: #ff6e42;
+  padding: 0.5rem 1rem;
+  height: auto;
+  text-transform: uppercase;
+}
+.fireside-chat-signup #mc_embed_shell .button:hover {
+  background-color: #ff470f;
+}
+
 section.cal-book {
   background-color: #1f1f1f;
 }
@@ -12676,21 +12734,6 @@ section.footer .footer-holder .brand h1, section.footer .footer-holder .brand .h
 }
 section.footer .footer-holder p.copy {
   margin-bottom: 0;
-}
-
-section .section-header {
-  text-align: center;
-  text-transform: uppercase;
-}
-section .section-header h3, section .section-header .h3 {
-  font-size: 1.8rem;
-  margin-bottom: 0;
-  letter-spacing: 1px;
-  color: #ff6e42;
-}
-section .section-header h2, section .section-header .h2 {
-  font-size: 3.6rem;
-  text-transform: capitalize;
 }
 
 body {
