--- a/sass/common/global.sass
+++ b/sass/common/global.sass
@@ -42,3 +42,22 @@ a
 
 .form-control
 	font-size: 1.8rem
+
+
+.responsive-video
+	position: relative
+	padding-bottom: 56.25%
+	height: 0
+	overflow: hidden
+	max-width: 100%
+	background: #000
+	border-radius: 1rem
+	overflow: hidden
+
+	iframe
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		border: 0
