--- a/sass/sections/hero.sass
+++ b/sass/sections/hero.sass
@@ -24,7 +24,7 @@ section.hero
 			width: 100%
 			padding: 3rem
 			z-index: 99
-			text-align: center
+			text-align: left
 			@include media-breakpoint-up(lg)
 				text-align: left
 
@@ -63,7 +63,7 @@ section.hero
 					font-weight: 600
 
 				@include media-breakpoint-up(md)
-					text-align: center
+					text-align: left
 				@include media-breakpoint-up(lg)
 					text-align: left
 					max-width: 500px
