--- a/sass/common/global.sass
+++ b/sass/common/global.sass
@@ -61,3 +61,27 @@ a
 		width: 100%
 		height: 100%
 		border: 0
+
+.announcement-bar
+	background-color: $color-brand
+	color: $color-white
+	position: relative
+	padding-top: 0.5rem
+	padding-bottom: 0.5rem
+	text-align: center
+	span
+		text-decoration: underline
+	&:hover
+		span
+			color: darken($color-brand, 50%)
+	p
+		margin-bottom: 0
+		padding: 0
+	
+	a
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		color: $color-white
