new user quote added, css updated

--- a/sass/sections/testimonials.sass
+++ b/sass/sections/testimonials.sass
@@ -90,6 +90,8 @@ section.testimonials
 					font-size: 1.6rem
 					margin: 0
 					width: 300px
+					span
+						font-weight: normal
 
 		&:nth-child(even)
 			.testimonial-meta
