--- a/docs/styles/home.css
+++ b/docs/styles/home.css
@@ -12619,6 +12619,9 @@ section.testimonials .testimonial .testimonial-meta .testimonial-meta-content h5
   margin: 0;
   width: 300px;
 }
+section.testimonials .testimonial .testimonial-meta .testimonial-meta-content h5 span, section.testimonials .testimonial .testimonial-meta .testimonial-meta-content .h5 span {
+  font-weight: normal;
+}
 .cloud-form {
   background-color: #ff6e42;
   padding: 3rem 0;
